<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="about_alc">ABOUT ALC</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="profile_img">Profile Image</string>
    <string name="track">Track:</string>
    <string name="country">Country:</string>
    <string name="email">Email:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="slack_uname">Slack Username:</string>
    <string name="name">Goodness Ifejesu Olajide</string>
    <string name="my_track">Android</string>
    <string name="my_country">Nigeria</string>
    <string name="my_tel">08179386053</string>
    <string name="my_email">ifejesugoodness97@gmail.com</string>
    <string name="my_slack_uname">\@iamifejesu</string>
</resources>
